--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Build
-      run: make cbuild
+      run: make build
 
     - name: Run Test
       run: make test
